stevenspass.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 1348,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.89,
  "homepage_snapshot_redirected_domain": "stevenspass.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402220047id_/http://stevenspass.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402220047id_/http%3A//stevenspass.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "stevenspass.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615094325id_/http%3A//www.stevenspass.com/privacy/index.aspx",
  "policy_title": "Privacy Policy . Stevens Pass",
  "policy_url": "stevenspass.com/privacy/index.aspx",
  "sha1": "735d3886652646ba43c3dd7a20e904f5f32e3e49",
  "simhash": 14802135191725139972,
  "simhash_updated": false,
  "site_hostname": "stevenspass.com",
  "site_url": "http://stevenspass.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615094325",
  "word_count": 214,
  "year": 2006
}

--- a/s/st/ste/stevenspass.com.html
+++ b/s/st/ste/stevenspass.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stevenspass.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230232003id_/http%3A//www.stevenspass.com/privacy/index.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stevenspass.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615094325id_/http%3A//www.stevenspass.com/privacy/index.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -349,7 +349,7 @@ if ( plugin ) {plugin = parseInt(plugin.description.substring(plugin.description
 	function DrawFlashWeather() {
 		if ( plugin ) {
 			// embed docwrite here
-				document.write("<OBJECT classid=\"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000\" codebase=\"https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0\"width=\"149\" height=\"209\" id=\"ff_shell\" align=\"\" VIEWASTEXT><param name=\"movie\" value=\"/_swf/weatherpanel.swf?temperature=26&conditions=10&snowfall=Last 7 days: 22in&basetop=54&baselodge=50&groomers=23&update=12/30/2005 2:04:31 PM&flashfileroot=http://www.stevenspass.com\"><param name=\"quality\" VALUE=high> <param name=\"bgcolor\" VALUE=\"#657a52\"><embed src=\"/_swf/weatherpanel.swf?temperature=26&conditions=10&snowfall=Last 7 days: 22in&basetop=54&baselodge=50&groomers=23&update=12/30/2005 2:04:31 PM&flashfileroot=http://www.stevenspass.com\" quality=\"high\" bgcolor=\"#657a52\" width=\"149\" height=\"209\" name=\"ff_shell\" align=\"\" type=\"application/x-shockwave-flash\" pluginspage=\"http://www.macromedia.com/go/getflashplayer\"></EMBED></OBJECT>");
+				document.write("<OBJECT classid=\"clsid:D27CDB6E-AE6D-11cf-96B8-444553540000\" codebase=\"https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0\"width=\"149\" height=\"209\" id=\"ff_shell\" align=\"\" VIEWASTEXT><param name=\"movie\" value=\"/_swf/weatherpanel.swf?conditions=10&temperature=45&weatherString=Last udpated: 6/14/2006 6:54 AM%0A&flashfileroot=http://www.stevenspass.com\"><param name=\"quality\" VALUE=high> <param name=\"bgcolor\" VALUE=\"#657a52\"><embed src=\"/_swf/weatherpanel.swf?conditions=10&temperature=45&weatherString=Last udpated: 6/14/2006 6:54 AM%0A&flashfileroot=http://www.stevenspass.com\" quality=\"high\" bgcolor=\"#657a52\" width=\"149\" height=\"209\" name=\"ff_shell\" align=\"\" type=\"application/x-shockwave-flash\" pluginspage=\"http://www.macromedia.com/go/getflashplayer\"></EMBED></OBJECT>");
 		} else if (!(navigator.appName && navigator.appName.indexOf("Netscape")>=0 && navigator.appVersion.indexOf("2.")>=0)){
 			// alternate docwrite here
 				document.write("<a href=\"http://www.stevenspass.com/snowreport/index.aspx\"><img src=\"/_img/common/conditions.jpg\" alt=\"Conditions\" width=\"149\" height=\"209\" border=\"0\" /></a>");
