bluebeam.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9432,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.27,
  "homepage_snapshot_redirected_domain": "bluebeam.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060411152318id_/http://www.bluebeam.com/web03/?src=99",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402185029id_/http%3A//bluebeam.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bluebeam.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615095606id_/http%3A//www.bluebeam.com/web03/company/CompanyPrivacy.asp",
  "policy_title": "Bluebeam Software, Inc.",
  "policy_url": "bluebeam.com/web03/company/CompanyPrivacy.asp",
  "sha1": "42d33b79d79c9a7e5a5034dffe6fd20b4b07cabe",
  "simhash": 11878836791455213086,
  "simhash_updated": false,
  "site_hostname": "bluebeam.com",
  "site_url": "http://bluebeam.com",
  "smog": 16.24,
  "strict_updated": false,
  "timestamp": "20060615095606",
  "word_count": 1527,
  "year": 2006
}

--- a/b/bl/blu/bluebeam.com.html
+++ b/b/bl/blu/bluebeam.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bluebeam.com privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211120134id_/http%3A//www.bluebeam.com/web03/company/CompanyPrivacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bluebeam.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615095606id_/http%3A//www.bluebeam.com/web03/company/CompanyPrivacy.asp) for the most accurate reproduction.-->
 
 <html><head><script language="javascript" id="clientEventHandlersJS">
 <!--
@@ -27,83 +27,80 @@ if (top.location != self.location){
 	
 //-->
 
-function newWindowPbPlus() {
-
-PbPlusdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/PbPlusMovie.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowBCS() {
-
-BCSdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/BCSmovie.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function ROIcalc() {
-
-ROIcalcWindow = window.open("http://www.bluebeam.com/web03/products/ROIcalc.htm", "thewin", "height=355, width=775, toolbar=no, scrollbars=no")
-
-}
-
 // Open movie window functions
-		
-function newWindowPbPlus() {
 
-PbPlusdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/PbPlusMovie.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
+
+function userSurvey(URL) {
+popX=425
+popY=495
+posX=((screen.availWidth/2)-(popX/2))
+posY=((screen.availHeight/2)-(popX/2))
+window.open(URL,"Pagename","height=495,width=425,toolbar=0,menubar=0,directories=0,scrollbars=0,left="+posX+",top="+posY);
+}
+
+function newWindowsDemo() {
+
+sDemo = window.open("/web03/movies/3sDemo-acad.htm", "thewin", "height=475, width=425, left=300, top=200, toolbar=no, scrollbars=no")
+
+}
+		
+function newWindowRevu() {
+
+Revudemo = window.open("http://www.bluebeam.com/web03/movies/revu-movie.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
+
+}
+
+function newWindowPbPlusACAD() {
+
+PbPlusdemo = window.open("http://www.bluebeam.com/web03/movies/pbplusACAD-movie.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
+
+}
+
+function newWindowPbPlusACADResellers() {
+
+PbPlusdemo = window.open("http://www.bluebeam.com/web03/movies/pbplusACAD-movie-resellers.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
+
+}
+
+function newWindowPbPlusSW() {
+
+PbPlusSWdemo = window.open("http://www.bluebeam.com/web03/movies/pbplusSW-movie.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
+
+}
+
+function newWindowPbPlusSWResellers() {
+
+PbPlusSWdemo = window.open("http://www.bluebeam.com/web03/movies/pbplusSW-movie-Resellers.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
+
+}
+
+function newWindowBbLT() {
+
+BbLTdemo = window.open("http://www.bluebeam.com/web03/movies/BbLT-movie.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
+
+}
+
+function newWindowBbLTResellers() {
+
+BbLTdemoResellers = window.open("http://www.bluebeam.com/web03/movies/BbLT-movie-resellers.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
 
 }
 
 function newWindowBCS() {
 
-BCSdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/BCSmovie.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
+BCSdemo = window.open("http://www.bluebeam.com/web03/movies/BCS-movie.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
 
 }
 
 function newWindowBCSResellers() {
 
-BCSdemoResellers = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/BCSmovie-Resellers.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowBatch() {
-
-BatchDemo = window.open("http://www.bluebeam.com/web03/PbPdf_demo/PbPdf_demoBatch.htm", "thewin", "height=675, width=825, toolbar=no, scrollbars=no")
+BCSdemoResellers = window.open("http://www.bluebeam.com/web03/movies/BCSmovie-Resellers.htm", "thewin", "height=640, width=825, toolbar=no, scrollbars=no")
 
 }
 
 function newWindowBp() {
 
 BlueprintDemo = window.open("http://www.bluebeam.com/web03/blueprint/PbPdf_blueprintDemo.htm", "thewin", "height=675, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowPbPDFSW() {
-
-PbPlusSWdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/PbPlusMovie-SW.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowBbLT() {
-
-BbLTdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/BbLTmovie.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowBbLTResellers() {
-
-BbLTdemoResellers = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/BbLTmovie-Resellers.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowPbPlusResellers() {
-
-PbPlusdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/PbPlusMovie-Resellers.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
-
-}
-
-function newWindowPbPDFSWResellers() {
-
-PbPlusSWdemo = window.open("http://www.bluebeam.com/web03/PbPlus_Movie/PbPlusMovie-SW-Resellers.htm", "thewin", "height=655, width=825, toolbar=no, scrollbars=no")
 
 }
 
@@ -121,29 +118,17 @@ ROIcalcWindow = window.open("http://www.bluebeam.com/web03/products/ROIcalc.htm"
 <title>Bluebeam Software, Inc.</title>
 <link rel="stylesheet" href="/web03/includes/css/Bluebeam.css" type="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta name="keywords" content="pdf creation, pdf editing, pdf markup, markup, pdf, bluebeam, autocad to pdf, cad to pdf, creating pdfs, pdf conversion software, bluebeam revu, pushbutton plus, revu, bluebeam lite, pdf conversion server, pdf solution">
 <title>Bluebeam Software, Inc.</title>
 
 </head><body leftmargin="0" bgcolor="#f5f5f5" topmargin="0">
 	<table id="Table6" cellspacing="0" cellpadding="0" border="0" width="100%" bgcolor="#ffffff">
-		<tbody><tr>
-			<td height="10"></td>
-		</tr>
-		<tr>
+		<tbody><tr>			
 			<td valign="bottom">
-				<table cellspacing="0" cellpadding="0" border="0" height="50">
-					<tbody><tr>
-						<td><img src="/web03/includes/images/spacer.gif" width="10" height="5"></td>
-						<td valign="bottom"><a href="/web03/index.asp"><img src="/web03/includes/images/tab-home.jpg" border="0" alt="Bluebeam"></a></td>
-						<td valign="bottom"><a href="/web03/products/products.asp"><img src="/web03/includes/images/tab-products.jpg" border="0" alt="Bluebeam Products"></a></td>
-						<td valign="bottom"><a href="/web03/products/industries.asp"><img src="/web03/includes/images/tab-industries.jpg" border="0" alt="Industry Solutions"></a></td>
-						<td valign="bottom"><a href="/web03/support/index.asp"><img src="/web03/includes/images/tab-support.jpg" border="0" alt="Technical Support"></a></td>
-						<td valign="bottom"><a href="/web03/partners/index.asp"><img src="/web03/includes/images/tab-partners.jpg" border="0" alt="Reseller Partners"></a></td>
-						<td valign="bottom"><a href="/web03/products/downloads.asp"><img src="/web03/includes/images/tab-try.jpg" border="0" alt="Free 30-day Trials"></a></td>
-						<td valign="bottom"><a href="/web03/products/purchase.asp"><img src="/web03/includes/images/tab-buy.jpg" border="0" alt="Bluebeam Store"></a></td>
-						<td><img src="/web03/includes/images/spacer.gif" width="10" height="5"></td>
-						<td valign="top"><img src="/web03/includes/images/BluebeamLogo-D.gif"></td>					
-					</tr>
-				</tbody></table>
+				<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="800" height="60">
+				<param name="movie" value="/web03/includes/images/menu.swf">
+				<param name="quality" value="high">
+				<embed src="/web03/includes/images/menu.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="800" height="60"></object> 
 			</td>
 		</tr>
 		<tr>
@@ -153,6 +138,7 @@ ROIcalcWindow = window.open("http://www.bluebeam.com/web03/products/ROIcalc.htm"
 						<td><img src="/web03/includes/images/spacer.gif" width="15" height="5"></td>
 						<td width="85" align="center"><a href="/web03/company/index.asp"><img src="/web03/includes/images/tab-barText-about.jpg" alt="About Bluebeam" border="0"></a></td>
 						<td width="85" align="center"><a href="/web03/company/news.asp"><img src="/web03/includes/images/tab-barText-news.jpg" alt="News" border="0"></a></td>
+						<td width="85" align="center"><a href="/web03/company/events.asp"><img src="/web03/includes/images/tab-barText-events.jpg" alt="Events" border="0"></a></td>
 						<td width="85" align="center"><a href="/web03/company/presskit.asp"><img src="/web03/includes/images/tab-barText-presskit.jpg" alt="Press Kit" border="0"></a></td>
 						<td width="85" align="center"><a href="/web03/company/employment.asp"><img src="/web03/includes/images/tab-barText-employ.jpg" alt="Employment" border="0"></a></td>
 						<td width="85" align="center"><a href="/web03/company/contact.asp"><img src="/web03/includes/images/tab-barText-contact.jpg" alt="Contact Us" border="0"></a></td>					
@@ -183,6 +169,9 @@ ROIcalcWindow = window.open("http://www.bluebeam.com/web03/products/ROIcalc.htm"
 						<br>
 						<br>
 						&nbsp;&nbsp;<a href="news.asp">News</a>
+						<br>
+						<br>
+						&nbsp;&nbsp;<a href="events.asp">Events</a>
 						<br>
 						<br>
 						&nbsp;&nbsp;<a href="presskit.asp">Press Kit</a>
@@ -418,12 +407,12 @@ ROIcalcWindow = window.open("http://www.bluebeam.com/web03/products/ROIcalc.htm"
 								<td align="left">
 									<br>
 									<hr>
-									Copyright © 2005 Bluebeam Software, Inc.
+									Copyright © 2006 Bluebeam Software, Inc.
 								</td>
 							</tr>
 							<tr>
 								<td align="left">
-									<a href="/web03/company/CompanyPrivacy.asp">Privacy Policy</a>&nbsp;|&nbsp;<a href="/web03/company/CompanyTermsOfUse.asp">Terms of Use</a>&nbsp;|&nbsp;<a href="/web03/company/contact.asp">Contact Us</a><!--&nbsp;|&nbsp;<a href="/web03/SiteMap.asp">Site Map</a>-->
+									<a href="/web03/company/CompanyPrivacy.asp">Privacy Policy</a>&nbsp;|&nbsp;<a href="/web03/company/CompanyTermsOfUse.asp">Terms of Use</a>&nbsp;|&nbsp;<a href="/web03/company/contact.asp">Contact Us</a>&nbsp;|&nbsp;<a href="/web03/SiteMap.asp">Site Map</a>
 								</td>
 							</tr>
 						</tbody></table>
