ebird.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2633,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.1,
  "homepage_snapshot_redirected_domain": "ebird.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060330020643id_/http://www.ebird.org/content/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060330041831id_/http%3A//ebird.org",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ebird.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615100315id_/http%3A//www.ebird.org/content/privacyStatement.html",
  "policy_title": "eBird || North America's destination for birding on the Web",
  "policy_url": "ebird.org/content/privacyStatement.html",
  "sha1": "c1749f2480f906a0bba3f2739b5313c5ce9844ba",
  "simhash": 15884185321538325291,
  "simhash_updated": false,
  "site_hostname": "ebird.org",
  "site_url": "http://ebird.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615100315",
  "word_count": 417,
  "year": 2006
}

--- a/e/eb/ebi/ebird.org.html
+++ b/e/eb/ebi/ebird.org.html
@@ -1,8 +1,7 @@
-<!--The following is the downloaded HTML source of the ebird.org privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228151357id_/http%3A//www.ebird.org/content/privacyStatement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ebird.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615100315id_/http%3A//www.ebird.org/content/privacyStatement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>eBird || North America's destination for birding on the Web</title>
-<!-- other page, EN -->
 <!-- enPageName: privacyStatement esPageName: privacyStatementSP -->
 <!--// INSERT THE GLOBAL.PROPERTIES.HDR FILE //--><!-- eb3_uetGlobalProperties -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -14,8 +13,7 @@
 <meta name="copyright" content="©ebird">
 <meta name="robots" content="follow, index">
 <meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="expires" content="-1">
-<style type="text/css" media="all">@import url(http://www.ebird.org/content/lib/css/ebird.css);</style>
+<meta http-equiv="expires" content="-1"><style type="text/css" media="all">@import url(http://www.ebird.org/content/lib/css/ebird2z.css);</style>
 <script language="javascript" src="http://www.ebird.org/content/common/lib/js/popWin.js"></script>
 <!-- END eb3_uetGlobalProperties --><script language="JavaScript">
 function setCookiesAndGo(sContentProject, sLanguage, sURL) {
@@ -40,17 +38,12 @@ function checkLanguage(sContentProject) {
 <div id="Wrapper">
 <!--// BEGIN PAGE HEADER ELEMENTS //--><!-- sPageName: ebp_privacyStatement -->
     <div id="header">        <div id="toolsHome">
-<img src="http://www.ebird.org/content/common/images/logos.gif" width="169" height="103" border="0" alt="" usemap="#logos_Map">
-<map name="logos_Map">
-<area shape="rect" alt="Audubon" coords="0,46,168,102" href="http://www.audubon.org">
-<area shape="rect" alt="Cornell Lab of Ornithology" coords="0,0,168,47" href="http://www.birds.cornell.edu">
-</map>
-	</div><!-- END toolsHome --> 
+<a href="http://www.zeiss.com"><img src="http://www.ebird.org/content/images/zeiss_trans.gif" width="169" height="91" border="0" alt="Sponsored by Zeiss"></a>
+	</div>
         <div id="tools">
-            <p id="welcome">&nbsp;</p>
-            <p><a href="http://www.ebird.org/content/contact/contact.html" title="Contact eBird">Contact</a> | <a href="http://www.ebird.org/content/faqGeneral.html" title="FAQ">FAQ</a> | <a href="javascript:popGlossary('http://www.ebird.org/content/glossary.html','')">Glossary</a></p>
-        </div><!-- END tools -->
-    </div><!-- END header div -->
+<a href="http://www.zeiss.com"><img src="http://www.ebird.org/content/images/zeiss_trans_short.gif" width="169" height="63" border="0" alt="Sponsored by Zeiss"></a>
+        </div>
+    </div>
     <div id="maintabs">
         <ul>
 		<li>
@@ -123,11 +116,11 @@ We may occasionally update or amend eBird's Privacy Statement. If we make change
 <!-- sSwitchLanguageURL: http://www.ebird.org/content/privacyStatementSP.html -->
 <!-- BEGIN eb3_uetFooter -->
 <div id="footer">
-©2005 <a href="http://www.audubon.org">Audubon</a> and 
+©2006 <a href="http://www.audubon.org">Audubon</a> and 
 <a href="http://www.birds.cornell.edu">Cornell Lab of Ornithology</a>&nbsp;|&nbsp; 
 <a href="http://www.ebird.org/content/about/affiliates.html">Affiliates and Sponsors</a>&nbsp;|&nbsp; 
-<a href="http://www.ebird.org/content/privacyStatement.html">Privacy Policy</a>
-</div>
+<a href="http://www.ebird.org/content/privacyStatement.html">Privacy Policy</a> |
+<a href="http://www.ebird.org/content/contact/contact.html" title="Contact eBird">Contact</a> | <a href="http://www.ebird.org/content/faqGeneral.html" title="FAQ">FAQ</a> | <a href="javascript:popGlossary('http://www.ebird.org/content/glossary.html','')">Glossary</a></div>
 <!-- END eb3_uetFooter -->
 <!--// END FOOTER //-->
 </div>
