--- a/t/ta/tac/taca.com.html
+++ b/t/ta/tac/taca.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the taca.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216230801id_/http%3A//taca.com/eng/cus/csec/csecsecpri.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the taca.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615101022id_/http%3A//www.taca.com/eng/cus/csec/csecsecpri.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/eng_short.dwt.asp" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="COD-ASP" -->
@@ -223,7 +223,7 @@ OpenWin.focus();
   </tr>
   <tr valign="middle">
     <td height="40" colspan="2"><a href="http://www.taca.com/eng/cus/csec/cseccoprig.asp" class="copyright">&nbsp;&nbsp;Copyright
-        TACA 2005<br>
+        TACA 2006<br>
 &nbsp;&nbsp;All rights reserved</a></td>
     <td height="40" valign="top"><table width="409" height="40" border="0" cellpadding="0" cellspacing="0">
       <tbody><tr>
