--- a/c/co/cos/costumeexpress.com.html
+++ b/c/co/cos/costumeexpress.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the costumeexpress.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214055348id_/http%3A//www.costumeexpress.com/companyinfo/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the costumeexpress.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615101257id_/http%3A//www.costumeexpress.com/companyinfo/privacypolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 		<title>
 			Costume Express Privacy Policy
 		</title>
 		<!-- -- (c) 2004 Costume Express. All Rights Reserved ---->
-		<!-- WWW2-SEA-COST -->
+		<!-- WWW1-SEA-COST -->
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 		<meta name="title" content=" Costume Express Privacy Policy ">
 		<meta name="description" content=" You may feel confident ordering costumes and Halloween supplies from Costume Express - read our privacy policy or contact us directly for more information ">
@@ -865,7 +865,9 @@
 			<a class="footerDetails" href="/companyinfo/secureordering.aspx">
 				Secure Ordering</a><br>
 			<a class="footerDetails" href="/companyinfo/contactinfo.aspx">
-				Contact Us</a></td>
+				Contact Us</a><br>
+			<a class="footerDetails" href="http://www.cpsc.gov/cpscpub/prerel/prhtml06/06517.html" target="_blank">Safety Recall Alert</a>
+		</td>
 		<td class="footerHeaderBackground" width="1"><img src="/Assets/Img/Site/pixel.gif" width="1"></td>
 		<td valign="top" nowrap="" class="footerDetails">
 			<p>
@@ -883,7 +885,7 @@
 		<td valign="center" nowrap="" align="center"><img src="/Assets/Img/Site/pixel.gif" height="5"><br><a href="http://www.birthdayexpress.com" target="_blank"><img src="/Assets/Img/Site/EN-US/logo_birthdayexpress.gif" border="0"></a><br><a href="http://www.storybook.com" target="_blank"><img src="/Assets/Img/Site/EN-US/logo_storybook.gif" border="0"></a></td>
 	</tr>
 </tbody></table>
-<span id="Footer_lblCopyRight" class="footerDetails">© 2005 Celebrate Express, Inc.</span>
+<span id="Footer_lblCopyRight" class="footerDetails">© 2006 Celebrate Express, Inc.</span>
 </form>
 	
 </body></html>
