--- a/j/je/jes/jesus.net.html
+++ b/j/je/jes/jesus.net.html
@@ -1,12 +1,18 @@
-<!--The following is the downloaded HTML source of the jesus.net privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223164006id_/http%3A//www.christ.com/loh-privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jesus.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615101711id_/http%3A//www.christ.com/loh-privacy-policy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>Privacy Policy for www.Christ.com: The Lord of Hosts</title>
+<title>www.Christ.com: Privacy Policy for The Lord of Hosts Website</title>
 </head>
-<body>
 
-<h1>Privacy Policy for www.Christ.com</h1>
+<body background="http://www.Webnames.net/backwrld.gif">
+
+<center>
+<table border="" cellpadding="7" bgcolor="#FFFFFF" width="75%">
+<tbody><tr>
+<td>
+
+<h1 align="center">Privacy Policy for www.Christ.com</h1>
 
 
 The Lord of Hosts website (www.Christ.com and its associated domains), and its advertisers and affiliates, are deeply committed to protecting the privacy of Internet users. Below is information outlining our continued support for the responsible management of consumer information.
@@ -32,18 +38,28 @@ delete your cookies, and disable their use while browsing. Please consult your w
 
 <h2>Privacy Policies for Third Party Advertising</h2>
 
-www.Christ.com works with a third party that serves ads to this site. To find out more about how Flycast manages the privacy of information in conjunction with serving ads on this site, please go to <a href="http://www.flycast.com/about_us/about-privacy.html">http://www.flycast.com/about_us/about-privacy.html</a>.
+www.Christ.com occasionally works with third parties that serve ads to this site. To find out more about the policies of these advertisers, visit their websites for further information.
 
 
 <br><br>
 <hr>
 <br><br>
 
-If you have any additional questions about our dedication to consumer privacy, please contact us at Job@Lordofhosts.com
+If you have any additional questions about our dedication to consumer privacy, please contact us using the contact form on our website:
+<br><br>
+<a href="http://www.christ.com/loh-mail-contact.html" target="_blank">Send E-Mail to Christ.com</a>
+<br><br>
 <br><br>
 Thank you, and God bless you
 <br><br>
 
+</td>
+</tr>
+</tbody></table>
+</center>
+
+<br><br>
+<h2 align="center"><a href="http://www.Christ.com">www.Christ.com</a></h2>
 
 
 </body></html>
