--- a/a/as/ast/astromart.com.html
+++ b/a/as/ast/astromart.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the astromart.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217225859id_/http%3A//www.astromart.com/aboutus/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the astromart.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615101810id_/http%3A//www.astromart.com/aboutus/privacy.asp) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html><head>
   <link rel="stylesheet" href="../common/css/common.css.asp" type="text/css">
   <link rel="stylesheet" href="../common/css/default.css.asp" type="text/css">
   <title>Astromart - Privacy Policy</title>
@@ -249,15 +249,15 @@ Road<br>Anacortes, Washington
   <table border="0" width="100%">
     <tbody><tr>
       <td valign="top">•</td>
-      <td valign="top">1098 users online</td>
+      <td valign="top">1451 users online</td>
     </tr>
     <tr>
       <td valign="top">•</td>
-      <td valign="top">2,006 new forum posts in the last week</td>
+      <td valign="top">1,555 new forum posts in the last week</td>
     </tr>
     <tr>
       <td valign="top">•</td>
-      <td valign="top">564 new users registered so far this month</td>
+      <td valign="top">395 new users registered so far this month</td>
     </tr>
     <tr>
       <td colspan="2" align="right">
