--- a/k/kr/kro/kronos.com.html
+++ b/k/kr/kro/kronos.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kronos.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219192332id_/http%3A//www.kronos.com/Privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kronos.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615101834id_/http%3A//kronos.com/Privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -8,6 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html;">
 <meta name="description" content="This statement discloses the privacy practices for the Kronos Incorporated website.">
 <link rel="stylesheet" href="includes/local.css" type="text/css">
+<!-- include file test Tuesday, May 2 -->
 <script language="javascript">
 var detect = navigator.userAgent.toLowerCase();
 var OS,browser,version,total,thestring;
@@ -80,14 +81,13 @@ else
 <body bgcolor="#ffffff" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
 
 <script language="JavaScript">
-<!-- hide
+<!--
 function MM_findObj(n, d) { //v3.0
   var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
     d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
   if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
   for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document); return x;
 }
-
 function MM_swapImage() { //v3.0
   var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
@@ -96,35 +96,43 @@ function MM_swapImgRestore() { //v3.0
   var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
 }
 
-// stop hiding -->
-</script>
-<table border="0" cellpadding="0" cellspacing="0" width="750">
-<!-- fwtable fwsrc="newHeader.png" fwbase="header.gif" fwstyle="Generic" fwdocid = "742308039" fwnested=""0" -->
-<tbody><tr>
-<td><a href="#content"><img alt="skip to page content" src="/img/spacer.gif" width="25" height="1" border="0"></a></td><td><img src="/img/spacer.gif" width="176" height="1" border="0"></td><td><img src="/img/spacer.gif" width="153" height="1" border="0"></td><td><img src="/img/spacer.gif" width="44" height="1" border="0"></td><td><img src="/img/spacer.gif" width="12" height="1" border="0"></td><td><img src="/img/spacer.gif" width="63" height="1" border="0"></td><td><img src="/img/spacer.gif" width="12" height="1" border="0"></td><td><img src="/img/spacer.gif" width="76" height="1" border="0"></td><td><img src="/img/spacer.gif" width="19" height="1" border="0"></td><td><img src="/img/spacer.gif" width="170" height="1" border="0"></td><td><img src="/img/spacer.gif" width="1" height="1" border="0"></td></tr>
+function MM_preloadImages() { //v3.0
+ var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+   var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+   if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
 
+//-->
+</script>
+<map name="Kronos" id="Kronos">
+<area href="/Index.htm" target="_top" alt="Kronos" shape="rect" coords="15,10,180,60"></map>
+<table border="0" cellpadding="0" cellspacing="0" width="750"><form method="get" action="/SearchFramesTemplate.htm" target="_top"></form><input type="hidden" name="ct" value="Public2003"><input type="hidden" name="advanced" value="yes"><input type="hidden" name="c2" value="@filewrite"><input type="hidden" name="o2" value=""><input type="hidden" name="q2" value="">
+<tbody><tr>
+<td rowspan="4"><img src="/img/KronosLogo.gif" width="280" height="65" border="0" usemap="#Kronos"></td>
+<td colspan="7"><img name="above_careers" src="/img/spacer.gif" width="270" height="6" border="0"></td>
+<td rowspan="3"><img name="search" src="/img/SearchSite.gif" width="60" height="38" border="0" alt="Search"></td>
+<td rowspan="3" valign="bottom" bgcolor="#333366"><!-- search --><input size="10" class="search" name="q1"><img src="/img/spacer.gif" width="1" height="7" border="0" alt=""><img src="/img/spacer.gif" width="2" height="6" border="0"><input class="go" type="submit" name="button" value="Go"><br>
+<img src="/img/spacer.gif" width="140" height="3" border="0"></td>
+<td><img src="/img/spacer.gif" width="1" height="6" border="0"></td>
+</tr>
 <tr>
-<td rowspan="4"><img src="/img/spacer.gif" width="25" height="58" border="0"></td>
-<td rowspan="3"><a href="/Index.htm" target="_top"><img name="Kronos logo" src="/img/logo2.gif" width="176" height="46" border="0"></a></td>
-<td colspan="8"><img name="header_r1_c3" src="/img/spacer.gif" width="549" height="7" border="0"></td>
-<td><img src="/img/spacer.gif" width="1" height="7" border="0"></td></tr><form method="get" action="/SearchFramesTemplate.htm" target="_top"></form><input type="hidden" name="ct" value="Public2003"><input type="hidden" name="advanced" value="yes"><input type="hidden" name="c2" value="@filewrite"><input type="hidden" name="o2" value=""><input type="hidden" name="q2" value="">
+<td><img name="left_of_careers" src="/img/spacer.gif" width="15" height="24" border="0"></td>
+<td><a href="/About/Jobs.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('careers','','/img/jobs_b.gif',1);"><img name="careers" src="/img/jobs.gif" width="58" height="24" border="0" alt="CAREERS"></a></td>
+<td><img name="between_careersContact" src="/img/spacer.gif" width="10" height="24" border="0"></td>
+<td><a href="/About/Contact.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('contact','','/img/contact-us_b.gif',1);"><img name="contact" src="/img/contact-us.gif" width="72" height="24" border="0" alt="CONTACT US"></a></td>
+<td><img name="between_contactCustsite" src="/img/spacer.gif" width="10" height="24" border="0"></td>
+<td><a href="https://customer.kronos.com" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('customersite','','/img/custsite_b.gif',1);"><img name="customersite" src="/img/custsite.gif" width="90" height="24" border="0" alt="CUSTOMER SITE"></a></td>
+<td><img name="right_of_custsite" src="/img/spacer.gif" width="15" height="24" border="0"></td>
+<td><img src="/img/spacer.gif" width="1" height="24" border="0"></td>
+</tr>
 <tr>
-<td rowspan="2"><img src="/img/spacer.gif" width="153" height="39" border="0"></td>
-<td><a href="/About/Jobs.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('careers','','/img/Newcareers_b.gif',1);"><img name="careers" src="/img/NewCareers.gif" width="44" height="26" border="0"></a></td>
-<td><img name="space_after_careers" src="/img/space_after_careers.gif" width="12" height="26" border="0"></td>
-<td><a href="/About/Contact.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('contact','','/img/Newcontact_b.gif',1);"><img name="contact" src="/img/NewContact.gif" width="63" height="26" border="0"></a></td>
-<td><img name="space_after_contact" src="/img/space_after_contact.gif" width="12" height="26" border="0"></td>
-<td><a href="http://customer.kronos.com/default.asp" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('customer','','/img/Newcustomer_b.gif',1);"><img name="customer" src="/img/NewCustomer.gif" width="76" height="26" border="0"></a></td>
-<td rowspan="2"><img name="header_r2_c9" src="/img/spacer.gif" width="19" height="39" border="0"></td>
-<td align="right" nowrap=""><img src="/img/search.gif" width="34" height="21" border="0" alt="Site Search">
-<input size="10" class="search" name="q1"><img src="/img/spacer.gif" width="1" height="7" border="0" alt=""><input class="go" type="submit" name="button" value="Go"><img src="/img/spacer.gif" width="5" height="1" border="0" alt=""></td>
-<td><img src="/img/spacer.gif" width="1" height="26" border="0"></td></tr>
-<form name="worldwide" style="margin-bottom: 0;"></form>
+<td rowspan="2" colspan="7"><img name="below_careers" src="/img/below_careers.gif" width="270" height="35" border="0"></td>
+<td><img src="/img/spacer.gif" width="1" height="8" border="0"></td>
+</tr><form name="worldwide" style="margin-bottom: 0;"></form>
 <tr>
-<td colspan="5"><img src="/img/spacer.gif" width="207" height="13" border="0" alt=""></td>
-<td rowspan="2" valign="bottom" align="right"><font face="arial" size="-2">
-<!-- this font tag affects only Netscape 4 -->
-<select class="ww" name="country" onchange="parent.location.href=worldwide.country.options[selectedIndex].value">
+<td colspan="2" bgcolor="#333366"><img src="/img/spacer.gif" width="55" height="8" border="0">
+<font face="arial" size="-2">
+<!-- this font tag affects only Netscape 4 --><select class="ww" name="country" onchange="parent.location.href=worldwide.country.options[selectedIndex].value">
 <option class="ww" selected="" value="/Index.htm">&nbsp;&nbsp;Kronos Worldwide &nbsp;</option>
 <option class="ww" value="/Aus/Index.htm">&nbsp;&nbsp;Asia Pacific</option>
 <option class="ww" value="/Canada/Index.htm">&nbsp;&nbsp;Canada</option>
@@ -132,30 +140,33 @@ function MM_swapImgRestore() { //v3.0
 <option class="ww" value="/UK/Index.htm">&nbsp;&nbsp;United Kingdom</option>
 <option class="ww" value="/About/MoreCountries.htm">&nbsp;&nbsp;More</option>
 <option class="ww" value="/Index.htm">&nbsp;&nbsp;Kronos Corporate</option>
-</select>
-</font><img src="/img/spacer.gif" width="2" height="1" border="0" alt=""></td>
-<td><img src="/img/spacer.gif" width="1" height="13" border="0"></td></tr>
+</select></font></td>
+<td><img src="/img/spacer.gif" width="1" height="27" border="0"></td>
+</tr>
 <tr>
-<td colspan="8"><img name="arctop" src="/img/arctop.gif" width="555" height="12" border="0"></td>
-<td><img src="/img/spacer.gif" width="1" height="12" border="0"></td></tr>
-<tr>
-<td colspan="10"><!-- sectional site navigation -->
-<table border="0" cellpadding="0" cellspacing="0" width="750" height="31"><tbody><tr><td colspan="13"><img name="top" src="/img/top.gif" width="750" height="13" border="0" alt=""></td></tr><tr><td nowrap="" bgcolor="#336699"><img name="left" src="/img/left1.gif" width="80" height="13" border="0" alt=""><a href="/About/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('about','','img/about2_b.gif',1);"><img name="about" src="img/about2.gif" width="54" height="13" border="0"></a><img src="/img/blue_spacer.gif" width="39" height="13" border="0" alt=""><a href="/FYO/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('solutions','','img/solutions2_b.gif',1);"><img name="solutions" src="img/solutions2.gif" width="55" height="13" border="0"></a><img src="/img/blue_spacer.gif" width="39" height="13" border="0" alt=""><a href="/Products/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('products','','img/products2_b.gif',1);"><img name="products" src="img/products2.gif" width="52" height="13" border="0"></a><img src="/img/blue_spacer.gif" width="40" height="13" border="0" alt=""><a href="/Support/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('services','','img/services2_b.gif',1);"><img name="services" src="img/services2.gif" width="50" height="13" border="0"></a><img src="/img/blue_spacer.gif" width="39" height="13" border="0" alt=""><a href="/PartnerPrograms/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('partners','','img/partners2_b.gif',1);"><img name="partners" src="img/partners2.gif" width="49" height="13" border="0"></a><img src="/img/blue_spacer.gif" width="39" height="13" border="0" alt=""><a href="/Events/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('events','','img/events2_b.gif',1);"><img name="events" src="img/events2.gif" width="40" height="13" border="0"></a><img src="/img/blue_spacer.gif" width="40" height="13" border="0" alt=""><a href="/Invest/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('investors','','img/investors2_b.gif',1);"><img name="investors" src="img/investors2.gif" width="54" height="13" border="0"></a><img name="right" src="/img/right1.gif" width="80" height="13" border="0" alt=""></td></tr><tr><td colspan="13"><img name="bottom" src="/img/nav1bottom.gif" width="750" height="5" border="0" alt=""></td></tr></tbody></table>
-<!-- end sectional site navigation -->
+<td colspan="10" bgcolor="#333366"><img src="/img/spacer.gif" width="57" height="34" border="0"><a href="/About/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('aboutus','','img/aboutus_b.gif',1);"><img name="aboutus" src="img/aboutus.gif" width="60" height="34" border="0" alt="About Us"></a><img src="/img/spacer.gif" width="39" height="34" border="0"><a href="/FYO/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('solution','','img/solution_b.gif',1);"><img name="solution" src="img/Solution.gif" width="62" height="34" border="0" alt="Solutions"></a><img src="/img/spacer.gif" width="39" height="34" border="0"><a href="/Products/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('product','','img/product_b.gif',1);"><img name="product" src="img/product.gif" width="59" height="34" border="0" alt="Products"></a><img src="/img/spacer.gif" width="39" height="34" border="0"><a href="/Support/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('service','','img/service_b.gif',1);"><img name="service" src="img/service.gif" width="56" height="34" border="0" alt="Services"></a><img src="/img/spacer.gif" width="39" height="34" border="0"><a href="/PartnerPrograms/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('partner','','img/partner_b.gif',1);"><img name="partner" src="img/partner.gif" width="57" height="34" border="0" alt="Partners"></a><img src="/img/spacer.gif" width="39" height="34" border="0"><a href="/Events/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('event','','img/event_b.gif',1);"><img name="event" src="img/event.gif" width="48" height="34" border="0" alt="Events"></a><img src="/img/spacer.gif" width="39" height="34" border="0"><a href="/Invest/Index.htm" target="_top" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('invest','','img/invest_b.gif',1);"><img name="invest" src="img/invest.gif" width="60" height="34" border="0" alt="Investors"></a><img src="/img/spacer.gif" width="57" height="34" border="0">
 </td>
-<td><img src="/img/spacer.gif" width="1" height="31" border="0"></td></tr>
-</tbody></table><table border="0" cellpadding="0" cellspacing="0" width="750" height="26"><tbody><tr><td valign="top"><img name="left" src="/img/crumb_left.gif" width="69" height="26" border="0"></td><td class="sectional"><img src="/img/spacer.gif" width="6" height="26" border="0"></td>
-<td class="sectional" width="680" align="left"><nobr><a class="crumb" href="&#10;&#9;&#9;&#9;/index.htm&#10;&#9;&#9;" target="_top">Home</a> &gt; <a class="crumb" href="Privacy.htm" target="_top">Privacy Statement/Terms of Use</a></nobr></td></tr></tbody></table>
+<td><img src="/img/spacer.gif" width="1" height="34" border="0"></td>
+</tr>
+<tr>
+<td colspan="10"><img name="white_hr" src="/img/spacer.gif" width="750" height="1" border="0"></td>
+<td><img src="/img/spacer.gif" width="1" height="1" border="0"></td>
+</tr>
+</tbody></table>
+<table border="0" cellpadding="0" cellspacing="0" width="750" height="21"><tbody><tr><td nowrap="" class="sectional"><img src="/img/spacer.gif" width="60" height="1" border="0"><nobr><a class="crumb" href="&#10;&#9;&#9;&#9;/Index.htm&#10;&#9;&#9;" target="_top">Home</a> &gt; <a class="crumb" href="Privacy.htm" target="_top">Privacy Statement/Terms of Use</a></nobr></td></tr></tbody></table>
 
 <!-- main structural table, 3 columns plus gray vertical line col right of nav -->
 <table border="0" cellpadding="0" cellspacing="0" width="750">
 <tbody><tr>
-<td valign="top" width="150"><!-- nav column -->
-
+<td valign="top" width="150" bgcolor="DEDEDE"><!-- nav column -->
+	<table border="0" cellpadding="0" cellspacing="0" width="150" bgcolor="#DEDEDE">
+ 	<tbody><tr><td><img src="/img/spacer.gif" width="10" height="20" border="0"></td>
+  	<td><img src="/img/spacer.gif" width="137" height="20" border="0"></td></tr>
+ 	
+	</tbody></table>
 </td><!-- end nav column -->
 
-<td bgcolor="#cccccc"><img name="gray vertical" src="/img/spacer.gif" width="2" height="1" border="0" alt=""></td>
-
+<td background="/img/purpvert.gif"><img name="formerly gray now purple vertical" src="/img/spacer.gif" width="2" height="1" border="0" alt=""></td>
 <td valign="top"><!-- center content column -->
 <!-- content table --><table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr><td rowspan="2"><img name="left_spacer" src="/img/spacer.gif" width="20" height="1" border="0" alt=""></td><td><img src="/img/spacer.gif" width="344" height="23" border="0" alt=""></td><td rowspan="2"><img name="right_spacer" src="/img/spacer.gif" width="34" height="1" border="0" alt=""></td></tr>
@@ -211,11 +222,11 @@ Kronos cautions you to make sure that you completely understand the potential ri
 <!-- end right column -->
 <td><img name="pageheight_spacer" src="/img/spacer.gif" width="1" height="305" border="0" alt=""></td></tr>
 
-<!-- footer row --><tr><td class="sectional" colspan="4" align="center"><span class="crumbs">©2003-2005, Kronos Incorporated. All rights reserved. &nbsp;
-<a class="crumb" href="/Privacy.htm" target="_top">Privacy Statement</a> |
-<a class="crumb" href="/Trademarks.htm" target="_top">Trademarks</a> |
-<a class="crumb" href="/Sitemap.htm" target="_top">Site Map</a></span></td>
-<td class="sectional"><img src="/img/spacer.gif" width="1" height="26" border="0" alt=""></td>
+<!-- footer row --><tr><td colspan="4" background="/img/footerbg.gif">&nbsp;&nbsp;<span class="sitefooter">©2003-2006, Kronos Incorporated. All rights reserved. &nbsp;
+<a class="A" href="/Privacy.htm" target="_top">Privacy Statement</a> |
+<a class="A" href="/Trademarks.htm" target="_top">Trademarks</a> |
+<a class="A" href="/Sitemap.htm" target="_top">Site Map</a></span></td>
+<td><img src="/img/spacer.gif" width="1" height="26" border="0" alt=""></td>
 </tr><!-- end footer row -->
 
 
