--- a/k/ke/kee/keepkidshealthy.com.html
+++ b/k/ke/kee/keepkidshealthy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the keepkidshealthy.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213200133id_/http%3A//www.keepkidshealthy.com/welcome/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the keepkidshealthy.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615102003id_/http%3A//www.keepkidshealthy.com/welcome/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
@@ -103,7 +103,10 @@ checkCount();
 							<td align="left" width="130"><b>Main Menu</b></td>
 						</tr>
 						<tr>
-							<td width="130"><a href="http://keepkidshealthy.healthology.com/focus_index.asp?f=children"><font size="2">Video Health Library</font></a></td>
+							<td width="130"><a href="http://keepkidshealthy.healthology.com/focus_index.asp?f=children"><font size="2">Health Library</font></a></td>
+						</tr>
+						<tr>
+							<td width="130"><a href="http://www.keepkidshealthy.com/experts/index.html"><font size="2">Parenting Experts</font></a></td>
 						</tr>
 						<tr>
 							<td width="130"><a href="http://www.keepkidshealthy.com/ask_the_pediatrician.html"><font size="2">Ask the Pediatrician</font></a></td>
@@ -385,7 +388,7 @@ checkCount();
 										</font></a>
 									<p><font size="2"><br>
 										</font></p>
-									<p><a href="http://www.keepkidshealthy.com/welcome/contactus.html"><font size="2">Contact Us</font></a><font size="2"><br>Copyright © 1999 - 2005 Keep Kids Healthy, LLC All rights reserved.<br>
+									<p><a href="http://www.keepkidshealthy.com/welcome/contactus.html"><font size="2">Contact Us</font></a><font size="2"><br>Copyright © 1999 - 2006 Keep Kids Healthy, LLC All rights reserved.<br>
 											<a href="http://www.keepkidshealthy.com/welcome/disclaimer.html">disclaimer</a> | <a href="http://www.keepkidshealthy.com/welcome/privacypolicy.html">privacy policy</a> | <a href="http://www.keepkidshealthy.com/welcome/sitemap.html">site index</a> | <a href="http://www.keepkidshealthy.com/welcome/reading.html">online bookstore</a> | <a href="http://www.keepkidshealthy.com/welcome/help.html">help</a></font></p>
 									<p><font size="2">Updated: February 5, 2003</font></p>
 									<p><font size="2"><b>Special Offers: <a href="http://www.keepkidshealthy.com/offers/club_mom.html">Club Mom</a> | <a href="http://www.keepkidshealthy.com/offers/babies_online.html">Free Web Pages</a> | <a href="http://www.keepkidshealthy.com/offers/babies_online.html">babies online . com</a></b></font></p>
