--- a/t/th/the/thecassiopeia.com.html
+++ b/t/th/the/thecassiopeia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thecassiopeia.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228165602id_/http%3A//www.thecassiopeia.com/ppolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecassiopeia.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615102007id_/http%3A//www.thecassiopeia.com/ppolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Privacy Policy For Internet Business Consultants For 3rd Millennium</title>
 <!-- Privacy Policy For Internet Business Consultants always by YOUR side in all YOUR needs on the way to YOUR Success in YOUR Online Business providing YOU with FREE Help, FREE Opportunities, FREE Tools, FREE Top Information necessary for YOUR Success -->
@@ -262,10 +262,16 @@ consult the related documents or email us at the above addresses.
 <a target="_blank" href="http://www.thecassiopeia.com/ppolicy.html"><font size="-1" color="003468" face="verdana,arial,helvetica">Privacy Policy</font></a><font size="-1" color="003468" face="verdana,arial,helvetica"> 
 <a target="_blank" href="http://www.thecassiopeia.com/Portal/ContactUs.html"><font size="-1" color="003468" face="verdana,arial,helvetica">Contact Us</font></a><font size="-1" color="003468" face="verdana,arial,helvetica">
 <a target="_BLANK" href="http://www.thecassiopeia.com/Guide/Links.html"><font size="-1" color="003468" face="verdana,arial,helvetica">LinkToUs</font></a><font size="-1" color="003468" face="verdana,arial,helvetica">
-<font face="verdana,arial,helvetica"><font color="003468" size="1">Copyright 2000-2004 ©© 
+<font face="verdana,arial,helvetica"><font color="003468" size="1">Copyright 2000-2006 ©© 
 <a href="http://www.thecassiopeia.com">
 <font color="003468"><b>theCassiopeia.com</b></font></a><font color="003468">
 <br> All Rights Reserved Worldwide      
 </font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></center><font face="Verdana"><font color="003468"><font size="-1"><font size="-1" color="003468" face="verdana,arial,helvetica"><font size="-1" color="003468" face="verdana,arial,helvetica"><font size="-1" color="003468" face="verdana,arial,helvetica"><font face="verdana,arial,helvetica"><font color="003468" size="1"><font color="003468">
-      <center></center></font></font></font></font></font></font></font></font></font></font></font></font></center></font></font></font></font></font></font></font></li></font></font></font></font></font></td></tr></tbody></table></font>
+      <center></center></font></font></font></font></font></font></font></font></font></font></font></font></center></font></font></font></font></font></font></font></li></font></font></font></font></font></td></tr></tbody></table></font><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-348550-1";
+urchinTracker();
+</script>
+
 </body></html>
