--- a/w/wo/wou/wouldyouhitthis.com.html
+++ b/w/wo/wou/wouldyouhitthis.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the wouldyouhitthis.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230220536id_/http%3A//wouldyouhitthis.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wouldyouhitthis.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615102045id_/http%3A//wouldyouhitthis.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<title>WouldYouHitThis? Privacy Policy</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!--google_ad_section_start--><title>WouldYouHitThis? Privacy Policy</title>
+<!--google_ad_section_end--><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="style.css" rel="stylesheet" type="text/css">
 <script language="javascript" src="includes/browserdetect_lite.js" type="text/javascript"></script>
 <script language="javascript" src="includes/opacity.js" type="text/javascript"></script>
@@ -86,18 +86,18 @@
 	<a href="index.php"><img src="images/header_logo.gif" width="132" height="60" class="header-logo" style="margin-top:4px;" border="0">	</a>
 	  <div class="header-bar" align="center"><a href="online.php" class="usersonline"><strong><script language="JavaScript" src="http://b.wouldyouhitthis.com/static/online.html"></script></strong> users online</a></div><div class="box-left" id="newsupdate"> 
 <strong><a href="forums.php?tid=23769">Want to win an iPod? Or brand new webcam? Read more...</a></strong></div>
-<div class="box-left" id="memberslogin">
+<!-- google_ad_section_start(weight=ignore) --><div class="box-left" id="memberslogin">
 	<h5>Members Login</h5>
 	<form action="/privacy.php?" method="post" name="login">
   	<div class="terms">Username:</div><input type="text" name="emailadd" class="login">
   	<div class="terms">Password:</div><input type="password" name="password" class="login">
-		<input type="hidden" name="logh" value="da6ecdb884c2a57e3d97563eb14794ef">
+		<input type="hidden" name="logh" value="cee106eb9d2b28e1aa3191c018bcf185">
   	<input type="submit" name="submit" value="Login!" class="login" id="button">
 	</form>
-	<a href="submit.php" class="menu"><strong>Not a member?</strong><br><br>No problem! Joining is quick, easy, and most importantly <strong><em>FREE!</em></strong><br><br>Just click here to begin!</a>
+<!-- google_ad_section_end -->	<a href="submit.php" class="menu"><strong>Not a member?</strong><br><br>No problem! Joining is quick, easy, and most importantly <strong><em>FREE!</em></strong><br><br>Just click here to begin!</a>
 	<div class="hr"></div>
-	<a href="javascript:launchPic(300, 270, 'forgotpass.php')"><font size="-1">Forget password?</font></a>
-</div>
+<!-- google_ad_section_start(weight=ignore) -->	<a href="javascript:launchPic(300, 270, 'forgotpass.php')"><font size="-1">Forget password?</font></a>
+<!-- google_ad_section_end --></div>
 	</td>
     <td width="11">&nbsp;</td>
     <td valign="top" style="padding-top:4px;">
@@ -163,7 +163,14 @@ webmaster@wouldyouhitthis.com</div>
     <td height="3" background="images/main_border_bottom.gif"></td>
     <td width="3" height="3" background="images/main_corner_right.gif"></td>
   </tr>
-</tbody></table><div class="terms">©2005 WouldYouHitThis.com - <a class="terms" href="privacy.php">Privacy Policy</a> - <a class="terms" href="tos.php">Terms of Service</a></div>
+</tbody></table>
+<div class="terms">©2006 WouldYouHitThis.com - <a class="terms" href="privacy.php">Privacy Policy</a> - <a class="terms" href="tos.php">Terms of Service</a></div>
+
+<div class="terms">Member links:
+	<a class="terms" href="index.php">Online Dating</a> - 	<a class="terms" href="stats.php">Stats</a> - <a class="terms" href="matches.php">Matches</a> - <a class="terms" href="picmanager.php">Video and Picture Sharing</a> - 
+	<a class="terms" href="messages.php">Messages</a> - <a class="terms" href="friends.php">Friends</a> - 
+	<a class="terms" href="myponies.php">Pony Bets</a> - <a class="terms" href="couples.php">Couple</a>
+</div>
 
 
 </body></html>
