trafficswarm.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3179,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.71,
  "homepage_snapshot_redirected_domain": "trafficswarm.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060615210628id_/http://www.trafficswarm.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060615210628id_/http%3A//trafficswarm.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "trafficswarm.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615104929id_/http%3A//www.trafficswarm.com/privacy.pl",
  "policy_title": "A Swarm of Free Traffic to Your Site Guaranteed! Get Targeted Free Advertising with TrafficSwarm.com",
  "policy_url": "trafficswarm.com/privacy.pl",
  "sha1": "8c85dd0fe3fde049ac6eec67703a24354d04a7a8",
  "simhash": 17292307711591104770,
  "simhash_updated": true,
  "site_hostname": "trafficswarm.com",
  "site_url": "http://trafficswarm.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615104929",
  "word_count": 525,
  "year": 2006
}

--- a/t/tr/tra/trafficswarm.com.html
+++ b/t/tr/tra/trafficswarm.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the trafficswarm.com privacy policy that was archived on 2005-05-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050512085646id_/http%3A//www.trafficswarm.com/privacy.pl) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trafficswarm.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615104929id_/http%3A//www.trafficswarm.com/privacy.pl) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<link rel="P3Pv1" href="http://www.trafficswarm.com/w3c/p3p.xml">
 <title>A Swarm of Free Traffic to Your Site Guaranteed! Get Targeted Free Advertising with TrafficSwarm.com</title>
 <meta name="TITLE" content="A Swarm of Free Traffic to Your Site Guaranteed! Get Targeted Free Advertising with TrafficSwarm.com">
 <meta name="DESCRIPTION" content="TrafficSwarm.com - the #1 traffic exchange network - can generate a swarm of targeted traffic to your site. You just can't beat free advertising and guaranteed visitors - create your FREE account today!">
@@ -135,10 +136,10 @@ function setSearchTarget(_option) {
         </tbody></table>
 
 
-    </td><td width="33%" align="center">
-		<script src="http://jupiter.bravenet.com/rover/f?cid=trafficswarm&amp;ctype=0&amp;term=000"></script>
+    </td><td width="33%" align="center"><a href="http://launch.roirocket.com/z/3289/CD2885/" target="_blank"><img src="http://launch.roirocket.com/42/2885/3289" border="0"></a>
+		<!--<script src="http://jupiter.bravenet.com/rover/f?cid=trafficswarm&ctype=0&term=000"></script>
 <noscript><iframe width="468" height="60" allowTransparency="true" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" src="http://jupiter.bravenet.com/rover/f?cid=trafficswarm&ctype=0&js=false&term=000"></iframe></noscript>
-</td>
+--></td>
 <!--     <td width="33%%" align="center" class="bodyContent"><font face=arial><a href="https://www.trafficswarm.com/securebanner.pl" class="footer">Put your banner <br>
         here as low as $1 CPM or <br>
         $0.10 CPC</a></font></td> -->
@@ -153,8 +154,8 @@ function setSearchTarget(_option) {
     <td width="40%"><img src="/images/new-logo-header.jpg" width="276" height="44" border="0" alt="TrafficSwarm"></td>
     <td width="20%">&nbsp;</td>
     <td width="40%"><img src="/images/todays-featured-sites.gif" width="196" height="16"><br>
-        <font face="arial" size="-1"><span class="bodyContent"><b>• <a href="http://www.trafficracer.com/?rid=1395" target="_new" style="color:blue">Get 15,000 visitor to your website FREE</a></b><br>
-        <b>• <a href="http://www.purplecats.com" target="_new" style="color:blue">The Purple Cat Mall</a></b></span></font></td>
+        <font face="arial" size="-1"><span class="bodyContent"><b>• <a href="http://www.100000usd.com/?afid=AFP3C349G2" target="_new" style="color:blue">Too good to be true ? But it's true.</a></b><br>
+        <b>• <a href="http://legal-forms-supermarket.com/about/for_sale_by_owner.html" target="_new" style="color:blue">For Sale By Owner - Forms and Software</a></b></span></font></td>
 </tr>
 </tbody></table>
 
@@ -320,7 +321,7 @@ function setSearchTarget(_option) {
         <a href="http://www.trafficswarm.com/cancelacct.pl">Cancel Account</a> • 
         <a href="http://www.trafficswarm.com/abuse.pl">Report Abuse</a></font>
     </td>
-        <td width="35%" align="right" class="footer">Copyright © 2002-2005. TrafficSwarm.com</td>
+        <td width="35%" align="right" class="footer">Copyright © 2002-2006. TrafficSwarm.com</td>
 </tr>
 </tbody></table>
 
